--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -33,13 +33,8 @@ body {
     border-left: 1px solid #dee2e6;
 }
 
-.pagination .page-link {
-    color: #007bff;
-}
-
-.pagination .page-item.active .page-link {
-    background-color: #007bff;
-    border-color: #007bff;
+.page-item .page-link:hover {
+    cursor: pointer;
 }
 
 .form-group {
@@ -52,6 +47,7 @@ body {
     margin-right: 10px;
     white-space: nowrap;
 }
+
 .form-group select, .form-group input {
     flex: 1;
 }
