--- a/course-main/src/main/resources/static/css/common.css
+++ b/course-main/src/main/resources/static/css/common.css
@@ -52,6 +52,9 @@ body {
     flex: 1;
 }
 
+#cke_courseContent {
+    width: 100%;
+}
 @media (max-width: 992px) {
     .sidebar {
         min-height: auto; /* 移除min-height */
